# pq-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  PRD.md  README.md  config.example.toml  pyproject.toml  test_data.json
.beads/: issues.jsonl
.github/workflows/: release.yml
.opencode/agent/: repo-code-analyzer.md
examples/: employees.json  products.json  users.json
src/pq/: __init__.py  cli.py  cli_arg.py  completion.py  config.py  evaluator.py  loader.py  main.py  output.py  styles.tcss  theme_mapping.py  tui.py  types.py  utils.py
tests/: conftest.py  test_app.py  test_cli_flags.py  test_completion.py  test_edge_cases.py  test_errors.py  test_file_size.py  test_file_type_flags.py  test_output.py  test_performance.py  test_suggestions.py
