[project]
name = "pq"
version = "0.6.0"
description = "Interactive Python query tool for structured documents"
readme = "README.md"
authors = [
    { name = "David Gethings", email = "dgethings@me.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "textual>=0.50.0",
    "typer>=0.21.0",
    "xmltodict>=1.0.2",
]

[project.scripts]
pq = "pq.cli:app"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.3",
    "textual-dev>=1.8.0",
]

[semantic_release]
major_on_zero = false
allow_zero_version = true
repo_dir = "."
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv build"
distribution_dir = "dist"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
hvcs = "github"

[semantic_release.remote]
ignore_token_for_push = true

[semantic_release.changelog.default_templates]
mask_initial_release = false
